image from lorempixel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<img src="http://lorempixel.com/output/food-q-c-640-480-6.jpg" id="octocat" alt="fork" />
 
 <!-- Feel free to change this text here -->
 <p>
