--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <script type="text/javascript">
+  	alert('Fork me...');
+  </script>
 </head>
 
 <body>
