--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- Feel free to change this text here 
+  I am new to GitHub and thank for guiding me through GitHub
+
+-->
 <p>
   Fork me? Fork you, @octocat!
 </p>
