--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 <p>This is a paragraph</p>
+<p>This is also a paragraph</p>
 
 <!-- Feel free to change this text here -->
 <p>
