--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -11,7 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- GitHub... so far so good -->
+<!-- GitHub... so far so good... I like it! -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
