--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>AIIT</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
