Change the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <title>Fork Example</title>
+  <title>My Fork Example</title>
   <meta charset="utf-8"/>
   <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
