--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<img src="forkit.gif" id="octocat" alt="Octacat is cute and sweet." />
 
 <!-- Feel free to change this text here -->
 <p>
