Added fork image :)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<img src="http://pngimg.com/upload/fork_PNG3067.png" />
 <p>
   Fork me? Fork you, @octocat!
 </p>
