added line to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! <br>
+  I created my first fork and pull request - G.W.
 </p>
 
 </body>
