--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- I changed this text. -->
 <p>
-  Fork me? Fork you, @octocat!
+  Hello, @octocat!
+  Why do cats need spoons or forks?
 </p>
 
 </body>
