--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
-<user-name name="rMozes"/>
+<user-name>rMozes</user-name>
 
 <!-- Feel free to change this text here -->
 <p>
