--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat! Lets puy some more text in here.
+  Fork me? Fork you, @octocat! Lets put even more text in here. and some more text here.
 </p>
 
 </body>
